--- a/src/scss/components/universals/shadow_fade.scss
+++ b/src/scss/components/universals/shadow_fade.scss
@@ -234,7 +234,7 @@
 
         & .request-form {
             & .works-items {
-                top: calc(64px + (75 - 64) * ((100vw - 360px) / (1919 - 360)));
+                top: calc(60px + (75 - 60) * ((100vw - 360px) / (1919 - 360)));
             }
         }
 
